eio: anonymous shared memory by descriptor -- SCM_RIGHTS sockets and the offer/accept pair.
FdSock (new) is the transport: native Unix-domain stream sockets (the JDK's
own channels cannot carry ancillary data), with listen/connect/adopt entry
points and a Conn moving bytes (read/write) and descriptors (sendFd/recvFd).
recvMsgOrFd is the general receive for mixed traffic -- one message's bytes
into the caller's buffer, the descriptor as an Option side-band -- so a peer
that interleaves plain records with descriptor grants on one socket gets one
listener loop dispatching on the record's own discriminator.  adopt wraps an
inherited or received descriptor as a Conn.  All platform deltas (sockaddr_un,
msghdr, cmsghdr: Linux vs macOS widths, alignments, constants) live in one
constants object; truncation (MSG_TRUNC/MSG_CTRUNC) is an error, never silent;
received descriptors are close-on-exec and extras are closed, not leaked.
Timeouts are Durations, applied at whole-ms resolution rounding UP so 200.us
stays a timeout instead of becoming wait-forever; zero waits without limit.

SharedMemory gains the anonymous fd-passed alternative to named objects:
createFd makes a RAM region with no name in any namespace -- memfd_create
sealed against shrinking on Linux (no peer can truncate the region into
SIGBUS), shm_open + immediate shm_unlink on macOS -- so the kernel refcounts
descriptors and mappings and reclaims the memory however rudely every holder
exits.  attachFd maps a received descriptor (n = 0 self-sizes via lseek,
consuming the fd either way; read-only attaches yield read-only segments, so
a stray write throws instead of killing the JVM).  offerFd/acceptFd wrap it
all in one call each: serve the descriptor at a socket path with a 16-byte
size-bearing header, or connect and map with only the element type agreed.

Error handling is Ask/Err throughout (Ask.flat for nested asks, peekAlt for
cleanup-on-failure); the sole throw left is the Linker binding helper, where
the Java 